--- a/_posts/2016-11-19-学习笔记.md
+++ b/_posts/2016-11-19-学习笔记.md
@@ -1,9 +1,9 @@
 ﻿---
-title: 学习笔记
 layout: post
-categories: document
+title:  学习笔记
 date:   2016-11-21 18:08:00 +0800
-tag: 日记
+categories: document
+tag: 学习笔记
 ---
 
 
